--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer id="footer">
-      Developed by <a href="https://www.instagram.com/__dibbaa__" target="_blank">@__dibbaa__</a>
+      Made with <img id="love-icon" src="loveIcon.png" alt="love"> by <a href="https://www.instagram.com/__dibbaa__" target="_blank">@__dibbaa__</a>
     </footer>
 
     <!-- JavaScript code for popup functionality -->
