change extension name
Change extension name and description

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,17 @@
 <html>
   <head>
-    <title>FollowAssist Popup</title>
+    <title>DanceBuddy Popup</title>
     <!-- Link to your CSS styles if needed -->
     <link rel="stylesheet" type="text/css" href="popupStyle.css">
   </head>
   <body>
     <div id="header">
         <img id="extension-icon" src="icon.png" alt="Extension Icon">
-        <h1 id="extension-name">FollowAssist</h1>
+        <h1 id="extension-name">DanceBuddy</h1>
     </div>
     <!-- Popup content -->
     <div id="popup-content">
-        An Instagram extension to assist users in following along with reels or video posts.
+        An Instagram extension to help users learn, practice and create dance reels or video posts.
         
         <h4>Action Buttons</h4>
         <li>
